# safe-autonomy-sims

./: .act3-pt.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MAINTAINERS  Makefile  README.md  docker-compose.yml  install.sh  mkdocs-requirements.txt  mkdocs.yml  pyproject.toml  req.txt  requirements.dep.txt  requirements.txt  setup.cfg  setup.py  tests-requirements.txt  version.py
.github/workflows/: build.yml  release-pypi.yml
base_models/: geometry.py  platforms.py
configs/: cwh3dmultiagent.yml
configs/agents/: cwh3d_docking.yml  cwh3d_docking_multiagent.yml  cwh3d_docking_rta.yml  cwh3d_inspection.yml  cwh3d_inspection_illumination.yml  cwh3d_inspection_multiagent.yml  dubins2d_rejoin.yml
configs/common/: ray.yml  tune.yml
configs/cwh3d/: six_dof_platform.yml
configs/docking/: agent.yml  environment.yml  experiment.yml  parameters.yml  platform.yml  rllib.yml  task.yml  tune.yml
configs/dubins3d/: platform.yml
configs/environments/: cwh3d.yml  cwh3d_multiagent.yml  dubins2d.yml  dubins3d.yml  dubins3d_multiagent.yml  inspection3d.yml  inspection3d_multiagent.yml  inspection_illumination3d.yml
configs/experiments/: docking_3d_debug.yml
configs/launch/: cwh3dmultiagent.yml  dubins_3d_multiagent.yml
configs/multiagent-docking/: environment.yml  experiment.yml  parameters.yml  task.yml  tune.yml
configs/multiagent-six-dof-inspection/: agent.yml  environment.yml  experiment.yml  parameters.yml  task.yml
configs/multiagent-translational-inspection/: environment.yml  experiment.yml  task.yml  tune.yml
configs/multiagent-weighted-six-dof-inspection/: agent.yml  environment.yml  experiment.yml  ray.yml  task.yml  tune.yml
docs/: about.md  concepts.md  configuration.md  experiments.md  gen_ref_nav.py  index.md  install.md  license.md  tasks.md
dones/: cwh_done_functions.py
extra_requirements/: requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements-tf.txt  requirements-torch.txt  requirements-viz.txt
glues/: combined_controller_glue.py
rewards/: cwh_rewards.py
safe_autonomy_sims/: __init__.py  utils.py
saferl/: utils.py
scripts/: ablation.py  ablation_study.ipynb  base_rta_test.py  corl_eval.py  corl_eval_parse.py  evaluation.py  export_onnx.py  gym_env_sanity_check.py  pettingzoo_env_sanity_check.py  setup_env_docker.sh  test_cwh_rta_final.py  test_inspection_rta_1v1.py  update-version-python.sh
simulators/: cwh_available_platforms.py  cwh_simulator.py  dubins_simulator.py
test/: conftest.py
tests/: conftest.py
(+701 files in other folders)
